--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -58,16 +58,21 @@ jobs:
         run: chmod +x ./.github/workflows/scripts/check_ignore.py
       - name: Run check_ignore
         run: |
-          git branch
-          git checkout -b temp_branch
+          if [[ -n "$(git status --porcelain pubspec.lock)" ]]; then
+            echo "Uncommitted changes detected in pubspec.lock. Stashing changes..."
+            git stash --include-untracked
+          fi
           git branch
           git checkout develop-postgres
           git pull
           git branch
-          git diff --name-only develop-postgres..HEAD
-          git checkout temp_branch
+          git checkout -
           pip install GitPython
-          python ./.github/workflows/scripts/check_ignore.py --repository ${{github.repository}} --merge_branch_name ${{github.head_ref}}
+          python ./.github/workflows/scripts/check_ignore.py --repository ${{github.repository}} --merge_branch_name ${{github.ref_name}}
+          if git stash list | grep -q "stash@{0}"; then
+            echo "Restoring stashed changes..."
+            git stash pop
+          fi
       - name: Compare translation files
         run: |
           chmod +x .github/workflows/scripts/compare_translations.py
