--- a/.gitignore
+++ b/.gitignore
@@ -100,6 +100,7 @@ lib/generated_plugin_registrant.dart
 **/android/gradlew.bat
 **/android/local.properties
 **/android/**/GeneratedPluginRegistrant.java
+**/.cxx
 
 # iOS/XCode related
 **/ios/**/*.mode1v3
