--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ homepage: https://github.com/PalisadoesFoundation/talawa
 
 repository: https://github.com/PalisadoesFoundation/talawa
 environment:
-  sdk: ">=2.17.0 <=3.6.2"
+  sdk: ">=2.17.0 <=3.7.2"
 
 dependencies:
   ############# Remove ###########
@@ -39,9 +39,7 @@ dependencies:
 
   flutter:
     sdk: flutter
-  flutter_braintree: ^4.0.0
   flutter_cache_manager: ^3.4.1
-  flutter_local_notifications: ^18.0.1
   flutter_localizations:
     sdk: flutter
   flutter_reaction_button: ^3.0.0+3
@@ -60,11 +58,11 @@ dependencies:
   mockito: ^5.4.4
   network_image_mock: ^2.1.1
   path_provider: ^2.1.5
-  permission_handler: 11.3.1
+  permission_handler: ^12.0.0+1
   plugin_platform_interface: ^2.1.7
   pointycastle: ^4.0.0
   provider: ^6.1.2
-  qr_code_scanner_plus: ^2.0.9+1
+  qr_code_scanner_plus: ^2.0.10+1
   qr_flutter: 4.1.0
   quick_actions: ^1.1.0
   shared_preferences: ^2.5.3
@@ -76,7 +74,7 @@ dependencies:
   tutorial_coach_mark: ^1.3.0
   url_launcher: ^6.3.1
   vibration: ^2.0.1
-  video_player: ^2.9.3
+  video_player: ^2.9.5
   visibility_detector: ^0.4.0+2
 
 dev_dependencies:
