--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_cache_manager: ^3.4.1
+  flutter_dotenv: ^5.2.1
   flutter_localizations:
     sdk: flutter
   flutter_reaction_button: ^3.0.0+3
@@ -100,6 +101,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - lang/
+    - .env
   fonts:
     - family: product-sans
       fonts:
