--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -65,10 +65,10 @@ jobs:
           git branch
           git checkout -b temp_branch
           git branch
-          git checkout develop-postgres
+          git checkout develop
           git pull
           git branch
-          git diff --name-only develop-postgres..HEAD
+          git diff --name-only develop..HEAD
           git checkout temp_branch
           pip install GitPython
           python ./.github/workflows/scripts/check_ignore.py --repository ${{github.repository}} --merge_branch_name ${{github.head_ref}}
@@ -113,10 +113,10 @@ jobs:
     name: "Base branch check"
     runs-on: ubuntu-latest
     steps:
-      - name: "Check if base branch is develop-postgres"
-        if: github.event.pull_request.base.ref != 'develop-postgres'
+      - name: "Check if base branch is develop"
+        if: github.event.pull_request.base.ref != 'develop'
         run: |
-          echo "PR is not against develop-postgres branch. Please refer PR_GUIDELINES.md"
+          echo "PR is not against develop branch. Please refer PR_GUIDELINES.md"
           echo "Error: Close this PR and try again."
           exit 1
 
@@ -217,7 +217,7 @@ jobs:
           echo "Error: Too many files (greater than 100) changed in the pull request."
           echo "Possible issues:"
           echo "- Contributor may be merging into an incorrect branch."
-          echo "- Source branch may be incorrect please use develop-postgres as source branch."
+          echo "- Source branch may be incorrect please use develop as source branch."
           exit 1
 
   Flutter-Testing:
@@ -288,8 +288,8 @@ jobs:
     name: Test Deployment to https://docs-mobile.talawa.io
     runs-on: ubuntu-latest
     needs: [iOS-Build, Android-Build]
-    # Run only if the develop-postgres branch and not dependabot
-    if: ${{ github.actor != 'dependabot[bot]' && github.event.pull_request.base.ref == 'develop-postgres' }}
+    # Run only if the develop branch and not dependabot
+    if: ${{ github.actor != 'dependabot[bot]' && github.event.pull_request.base.ref == 'develop' }}
     steps:
       - name: Checkout the Repository
         uses: actions/checkout@v4
