20250518175537 Fixed old develop-postgres references

--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -16,7 +16,7 @@ reviews:
     enabled: true
     drafts: false
     base_branches:
-      - develop-postgres
+      - develop
       - develop
       - main
   path_filters: 
