--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_cache_manager: ^3.4.1
+  flutter_dotenv: ^5.2.1
   flutter_local_notifications: ^18.0.1
   flutter_localizations:
     sdk: flutter
@@ -101,6 +102,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - lang/
+    - .env
   fonts:
     - family: product-sans
       fonts:
