--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   image_picker: ^1.1.2
   intl: ^0.19.0
   json_annotation: ^4.7.0
+  logger: ^2.4.0
   mockito: ^5.4.4
   network_image_mock: ^2.1.1
   path_provider: ^2.1.5
