--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ homepage: https://github.com/PalisadoesFoundation/talawa
 
 repository: https://github.com/PalisadoesFoundation/talawa
 environment:
-  sdk: ">=2.17.0 <=3.7.2"
+  sdk: ">=2.17.0 <=3.8.1"
 
 dependencies:
   ############# Remove ###########
@@ -55,7 +55,7 @@ dependencies:
   http: ^1.3.0
   image_cropper: 9.1.0
   image_picker: ^1.1.2
-  intl: ^0.19.0
+  intl: ^0.20.2
   json_annotation: ^4.7.0
   mockito: ^5.4.4
   network_image_mock: ^2.1.1
@@ -87,6 +87,8 @@ dev_dependencies:
     sdk: flutter
   hive_generator: ^2.0.1
 
+  integration_test:
+    sdk: flutter
   json_serializable: ^6.8.0
   lint: ^2.7.0
 
