--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -279,9 +279,10 @@ jobs:
         run: flutter build apk
 
   iOS-Build:
-    name: Testing build for iOS
+    if: ${{ github.actor != 'dependabot[bot]' }}
+    name: iOS Build and Relaese
     runs-on: macos-latest
-    needs: [Flutter-Testing]
+    needs: Flutter-Testing
     steps:
       - uses: actions/checkout@v4
       - uses: subosito/flutter-action@v2
@@ -293,6 +294,29 @@ jobs:
         run: cp .env.example .env
       - name: Building for ios
         run: flutter build ios --release --no-codesign
+        # '--no-codesign' is used for building without code signing.
+        # For actual distribution, proper code signing is required.
+
+      ########################################################
+      ## Package the app as an .ipa and create a release ##
+      ########################################################
+      - name: Releasing for iOS
+        run: |
+          mkdir Payload
+          cp -r build/ios/iphoneos/Runner.app Payload/Runner.app
+          zip -r app.ipa Payload
+        # This packages the Runner.app into an .ipa file
+
+      - uses: ncipollo/release-action@v1
+        with:
+          name: "Automated iOS Release"
+          artifacts: "app-release.ipa"
+          allowUpdates: "true"
+          generateReleaseNotes: false
+          tag: "automated"
+          body: |
+            This is an automated release, triggered by a recent push. 
+            This may or may not be stable, so please have a look at the stable release(s).
 
   Test-Docusaurus-Deployment:
     name: Test Deployment to https://docs-mobile.talawa.io
