--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -290,6 +290,8 @@ jobs:
           flutter-version: "3.32.8"
           channel: "stable" # or: 'beta', 'dev' or 'master'
           architecture: x64
+      - name: Select Xcode version
+        run: sudo xcode-select -s /Applications/Xcode_15.3.app
       - name: Copy .env.example to .env
         run: cp .env.example .env
       - name: Building for ios
@@ -310,7 +312,7 @@ jobs:
       - uses: ncipollo/release-action@v1
         with:
           name: "Automated iOS Release"
-          artifacts: "app.ipa"
+          artifacts: "app-release.ipa"
           allowUpdates: "true"
           generateReleaseNotes: false
           tag: "automated"
