--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -168,6 +168,8 @@ jobs:
           flutter-version: "3.32.8"
           channel: "stable" # or: 'beta', 'dev' or 'master'
           architecture: x64
+      - name: Building for ios
+        run: flutter build ios --release --no-codesign
       - name: Copy .env.example to .env
         run: cp .env.example .env
       - name: Building for ios
