--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -20,6 +20,7 @@ on:
 
 env:
   CODECOV_UNIQUE_NAME: CODECOV_UNIQUE_NAME-${{ github.run_id }}-${{ github.run_number }}
+  FLUTTER_VERSION: 3.32.8
 
 jobs:
   Flutter-Codebase-Check:
@@ -39,7 +40,7 @@ jobs:
           java-version: "17.0"
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.32.8"
+          flutter-version: ${{ env.FLUTTER_VERSION }}
           channel: "stable" # or: 'beta', 'dev' or 'master'
       - name: Running pub get in talawa_lint
         run: cd talawa_lint && flutter pub get && cd ..
@@ -93,7 +94,7 @@ jobs:
           java-version: "17.0"
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.32.8"
+          flutter-version: ${{ env.FLUTTER_VERSION }}
           channel: "stable" # or: 'beta', 'dev' or 'master'
       - name: Copy .env.example to .env
         run: cp .env.example .env
@@ -130,7 +131,7 @@ jobs:
           java-version: "17.0"
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.32.8"
+          flutter-version: ${{ env.FLUTTER_VERSION }}
           channel: "stable" # or: 'beta', 'dev' or 'master'
       - name: Copy .env.example to .env
         run: cp .env.example .env
@@ -159,15 +160,15 @@ jobs:
   iOS-Build:
     if: ${{ github.actor != 'dependabot[bot]' }}
     name: iOS Build and Relaese
-    runs-on: macos-latest
+    runs-on: macos-14
     needs: Flutter-Testing
     steps:
       - uses: actions/checkout@v4
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.32.8"
-          channel: "stable" # or: 'beta', 'dev' or 'master'
           architecture: x64
+          flutter-version: ${{ env.FLUTTER_VERSION }}
+          channel: "stable" # or: 'beta', 'dev' or 'master'
       - name: Building for ios
         run: flutter build ios --release --no-codesign
       - name: Copy .env.example to .env
