--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -280,7 +280,7 @@ jobs:
         run: flutter build apk
 
   iOS-Build:
-    name: iOS Build and Release
+    name: Testing build for iOS
     permissions:
       contents: write
     runs-on: macos-latest
@@ -299,30 +299,6 @@ jobs:
         run: cp .env.example .env
       - name: Building for ios
         run: flutter build ios --release --no-codesign
-        # '--no-codesign' is used for building without code signing.
-        # For actual distribution, proper code signing is required.
-
-      ########################################################
-      ## Package the app as an .ipa and create a release ##
-      ########################################################
-      - name: Releasing for iOS
-        run: |
-          mkdir Payload
-          cp -r build/ios/iphoneos/Runner.app Payload/Runner.app
-          zip -r app.ipa Payload
-        # This packages the Runner.app into an .ipa file
-
-      - uses: ncipollo/release-action@v1
-        with:
-          name: "Automated iOS Release"
-          artifacts: "app-release.ipa"
-          allowUpdates: "true"
-          generateReleaseNotes: false
-          tag: "automated"
-          body: |
-            This is an automated release, triggered by a recent push. 
-            This may or may not be stable, so please have a look at the stable release(s).
-
   Test-Docusaurus-Deployment:
     name: Test Deployment to https://docs-mobile.talawa.io
     runs-on: ubuntu-latest
