--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -278,6 +278,8 @@ jobs:
         run: flutter pub get
       - name: Building for android
         run: flutter build apk
+        env:
+          GRADLE_OPTS: "-Xmx3g -XX:MaxMetaspaceSize=512m"
 
   iOS-Build:
     name: Testing build for iOS
@@ -289,7 +291,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: latest-stable
+          xcode-version: '15.4'
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: ${{ env.FLUTTER_VERSION }}
