--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -161,7 +161,7 @@ jobs:
 
   iOS-Build:
     if: ${{ github.actor != 'dependabot[bot]' }}
-    name: iOS Build and Relaese
+    name: iOS Build and Release
     permissions:
       contents: write
     runs-on: macos-latest
@@ -170,7 +170,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: '15.4'
+          xcode-version: latest-stable
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: ${{ env.FLUTTER_VERSION }}
